[project]
name = "ip-locator"
version = "0.1.0"
description = "IP address geolocation and network information tool"
authors = [{name = "jmeiracorbal"}]
readme = "README.md"
requires-python = ">=3.8,<3.14"
dependencies = [
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.15.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tracker", "src/constants.py"]
include = ["main.py"]

[tool.hatch.build.targets.wheel.sources]
"src/tracker" = "tracker"
"src/constants.py" = "constants.py"
"main.py" = "main.py"

[project.scripts]
ip-locator = "main:main"

